feat(msg):添加获取私聊消息列表
